--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>I want to be a software developer because designing computer programs lets me use my creative and problem-solving skills. Software development wasn't my initial career path, but I'm glad I discovered it. In college, I originally studied communications. After obtaining my bachelor's degree in communications, I accepted a job as an editor at a publishing firm. I was responsible for correcting grammatical and stylistic mistakes in clients' work. While I was good at my job and worked hard, the position didn't excite me, so I searched for something more fulfilling.
+
+After sharing my lack of job satisfaction with a friend, he told me about his career as a software developer. It was something I had never considered, but his description of the field intrigued me. I learned more about the subject via online resources and began to teach myself basic concepts. Eventually, I earned a bachelor's degree in computer science. I enjoyed the challenges that my education presented, and I'm very excited to work as a professional software developer and use the versatile skills that this career demands.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
